force-app/main/default/objects/Store_Level_Temp__c/Store_Level_Temp__c.object-meta.xml
<CustomObject>
    <label>Store Level Temp</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Store Level Temp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Level Temp</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>