force-app/main/default/objects/Store_Level_Temp__c/fields/AC_Level__c.field-meta.xml
<CustomField>
    <fullName>AC_Level__c</fullName>
    <label>AC Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>