force-app/main/default/objects/Store_Level_Temp__c/fields/Refrigerator_Level__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Level__c</fullName>
    <label>Refrigerator Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>