force-app/main/default/objects/Store_Level_Temp__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Store Level Temp</relationshipLabel>
    <relationshipName>Store_Level_Temp</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>