force-app/main/default/objects/Store_Level_Temp__c/fields/Total_Level__c.field-meta.xml
<CustomField>
    <fullName>Total_Level__c</fullName>
    <label>Total Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>