force-app/main/default/objects/Store_Level_Temp__c/fields/TV_Level__c.field-meta.xml
<CustomField>
    <fullName>TV_Level__c</fullName>
    <label>TV Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>