force-app/main/default/objects/Store_Level_Temp__c/fields/TV_Sales__c.field-meta.xml
<CustomField>
    <fullName>TV_Sales__c</fullName>
    <description>万元</description>
    <label>TV Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>