force-app/main/default/objects/Store_Level_Temp__c/fields/WM_Level__c.field-meta.xml
<CustomField>
    <fullName>WM_Level__c</fullName>
    <label>WM Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>