force-app/main/default/objects/Store_Level_Temp__c/fields/WM_Sales__c.field-meta.xml
<CustomField>
    <fullName>WM_Sales__c</fullName>
    <label>WM Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>